--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,18 @@
 {
-  "compilerOptions": {
-    "strict": true,
-    "checkJs": true,
-    "allowJs": true,
-    "declaration": true,
-    "emitDeclarationOnly": true,
-    "outDir": "types",
-    "lib": ["ES2016", "dom"]
-  },
-  "include": [
-    "resources/**/*.js",
-    "resources/**/*.d.ts",
-    "index/index.js",
-    "read/reader.js"
-  ]
+	"extends": "./.svelte-kit/tsconfig.json",
+	"compilerOptions": {
+		"allowJs": true,
+		"checkJs": true,
+		"esModuleInterop": true,
+		"forceConsistentCasingInFileNames": true,
+		"resolveJsonModule": true,
+		"skipLibCheck": true,
+		"sourceMap": true,
+		"strict": true,
+		"moduleResolution": "bundler"
+	}
+	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
+	//
+	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
+	// from the referenced tsconfig.json - TypeScript does not merge them in
 }
