basic storybook setup

--- a/package.json
+++ b/package.json
@@ -13,10 +13,22 @@
     "lint": "prettier --check . && eslint .",
     "format": "prettier --write .",
     "test:integration": "playwright test",
-    "test:unit": "vitest"
+    "test:unit": "vitest",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.2.26",
     "@playwright/test": "^1.42.1",
+    "@storybook/addon-a11y": "^8.0.5",
+    "@storybook/addon-essentials": "^8.0.5",
+    "@storybook/addon-interactions": "^8.0.5",
+    "@storybook/addon-links": "^8.0.5",
+    "@storybook/addon-svelte-csf": "^4.1.2",
+    "@storybook/blocks": "^8.0.5",
+    "@storybook/svelte": "^8.0.5",
+    "@storybook/sveltekit": "^8.0.5",
+    "@storybook/test": "^8.0.5",
     "@sveltejs/adapter-auto": "^3.1.1",
     "@sveltejs/kit": "^2.5.4",
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
@@ -25,9 +37,11 @@
     "@typescript-eslint/parser": "^7.3.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-svelte": "^2.35.1",
     "prettier": "^3.2.5",
     "prettier-plugin-svelte": "^3.2.2",
+    "storybook": "^8.0.5",
     "svelte": "^4.2.12",
     "svelte-check": "^3.6.8",
     "tslib": "^2.6.2",
@@ -45,5 +59,10 @@
     "ios >= 11.3",
     "opera >= 56",
     "safari >= 11.1"
-  ]
+  ],
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
+  }
 }
