--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-svelte": "^3.2.2",
     "storybook": "^8.0.5",
-    "svelte": "^4.2.12",
+    "svelte": "^5.0.0-next.101",
     "svelte-check": "^3.6.8",
     "tslib": "^2.6.2",
     "typescript": "^5.4.3",
