--- a/package.json
+++ b/package.json
@@ -18,36 +18,36 @@
     "build-storybook": "storybook build"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.2.26",
-    "@playwright/test": "^1.42.1",
-    "@storybook/addon-a11y": "^8.0.5",
-    "@storybook/addon-essentials": "^8.0.5",
-    "@storybook/addon-interactions": "^8.0.5",
-    "@storybook/addon-links": "^8.0.5",
-    "@storybook/blocks": "^8.0.5",
-    "@storybook/svelte": "^8.0.5",
-    "@storybook/sveltekit": "^8.0.5",
-    "@storybook/test": "^8.0.5",
-    "@sveltejs/adapter-auto": "^3.1.1",
-    "@sveltejs/kit": "^2.5.4",
-    "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "@chromatic-com/storybook": "^1.3.3",
+    "@playwright/test": "^1.43.1",
+    "@storybook/addon-a11y": "^8.0.9",
+    "@storybook/addon-essentials": "^8.0.9",
+    "@storybook/addon-interactions": "^8.0.9",
+    "@storybook/addon-links": "^8.0.9",
+    "@storybook/blocks": "^8.0.9",
+    "@storybook/svelte": "^8.0.9",
+    "@storybook/sveltekit": "^8.0.9",
+    "@storybook/test": "^8.0.9",
+    "@sveltejs/adapter-auto": "^3.2.0",
+    "@sveltejs/kit": "^2.5.7",
+    "@sveltejs/vite-plugin-svelte": "^3.1.0",
     "@types/dompurify": "^3.0.5",
-    "@types/eslint": "8.56.6",
-    "@typescript-eslint/eslint-plugin": "^7.3.1",
-    "@typescript-eslint/parser": "^7.3.1",
-    "eslint": "^8.57.0",
+    "@types/eslint": "8.56.10",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
+    "eslint": "^9.2.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-storybook": "^0.8.0",
-    "eslint-plugin-svelte": "^2.36.0-next.13",
+    "eslint-plugin-svelte": "^2.38.0",
     "prettier": "^3.2.5",
-    "prettier-plugin-svelte": "^3.2.2",
-    "storybook": "^8.0.5",
+    "prettier-plugin-svelte": "^3.2.3",
+    "storybook": "^8.0.9",
     "svelte": "^5.0.0-next.101",
-    "svelte-check": "^3.6.8",
+    "svelte-check": "^3.7.1",
     "tslib": "^2.6.2",
-    "typescript": "^5.4.3",
-    "vite": "^5.2.6",
-    "vitest": "^1.4.0"
+    "typescript": "^5.4.5",
+    "vite": "^5.2.11",
+    "vitest": "^1.6.0"
   },
   "type": "module",
   "browserslist": [
@@ -66,8 +66,8 @@
     ]
   },
   "dependencies": {
-    "dompurify": "^3.1.0",
-    "isomorphic-dompurify": "^2.7.0",
+    "dompurify": "^3.1.2",
+    "isomorphic-dompurify": "^2.9.0",
     "marked": "^12.0.2"
   }
 }
